--- a/public/imgs/svg/Camagru.htm
+++ b/public/imgs/svg/Camagru.htm
@@ -14,7 +14,7 @@
     </head>
     <body><nav class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
   <div class="container">
-      <a class="navbar-brand" href="http://localhost/Camagru/Posts/index">
+      <a class="navbar-brand" href="http://192.168.99.100:8088/Camagru/Posts/index">
           <svg width="70" height="20" viewBox="0 0 76 20" fill="none">
               <path d="M2.8333 17.6623H5.92418V2.33766H2.31816V5.45455H0V1.49012e-07H8.75748V17.6623H11.8484V20H2.8333V17.6623Z" fill="white">
               </path><path d="M21.3785 17.6623H30.6512V10.9091H22.1513V8.57143H30.6512V2.33766H21.3785V0H33.4845V20H21.3785V17.6623Z" fill="white">
@@ -32,10 +32,10 @@
             <!-- Navbar Group one -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active pr-3">
-              <a class="nav-link" href="http://localhost/Camagru/posts/index"><i class="fas fa-index mr-1" aria-hidden="true"></i>Home</a>
+              <a class="nav-link" href="http://192.168.99.100:8088/Camagru/posts/index"><i class="fas fa-index mr-1" aria-hidden="true"></i>Home</a>
             </li>
             <li class="nav-item active pr-3">
-              <a class="nav-link" href="http://localhost/Camagru/pages/about"><i class="fa fa-info-circle mr-2" aria-hidden="true"></i>About </a>
+              <a class="nav-link" href="http://192.168.99.100:8088/Camagru/pages/about"><i class="fa fa-info-circle mr-2" aria-hidden="true"></i>About </a>
             </li>
           </ul>
             <!-- Navbar Group two -->
@@ -43,17 +43,17 @@
             <!-- Check IF the User Have A ssesion id or not -->
                               <!-- User have an id -->
                 <li class="nav-item active pr-3">
-                    <a class="nav-link" href="http://localhost/Camagru/users/profile"><i class="fas fa-user" aria-hidden="true"></i> Profile </a>
+                    <a class="nav-link" href="http://192.168.99.100:8088/Camagru/users/profile"><i class="fas fa-user" aria-hidden="true"></i> Profile </a>
                 </li>
                 <!-- User have an id -->
                 <li class="nav-item active pr-3">
-                    <a class="nav-link" href="http://localhost/Camagru/Posts/camera"><i class="fas fa-camera" aria-hidden="true"></i> Camera </a>
+                    <a class="nav-link" href="http://192.168.99.100:8088/Camagru/Posts/camera"><i class="fas fa-camera" aria-hidden="true"></i> Camera </a>
                 </li>
                 <li class="nav-item active pr-3">
-                    <a class="nav-link" href="http://localhost/Camagru/users/modify"><i class="fas fa-edit" aria-hidden="true"></i> EditProfile </a>
+                    <a class="nav-link" href="http://192.168.99.100:8088/Camagru/users/modify"><i class="fas fa-edit" aria-hidden="true"></i> EditProfile </a>
                 </li>
                 <li class="nav-item active pr-3">
-                  <a class="nav-link" href="http://localhost/Camagru/users/logout"><i class="fas fa-sign-out-alt" aria-hidden="true"></i>Logout</a>
+                  <a class="nav-link" href="http://192.168.99.100:8088/Camagru/users/logout"><i class="fas fa-sign-out-alt" aria-hidden="true"></i>Logout</a>
                 </li>
               <!-- User Dont have an id Session -->
                         </ul>
